fix alignment of image search box and button
git-svn-id: https://svn.library.cornell.edu/cul7theme/trunk@732 29d2e8ee-217f-479a-8a37-9775d62f972e

--- a/css/cul/_miscellaneous.scss
+++ b/css/cul/_miscellaneous.scss
@@ -180,6 +180,12 @@
 
 .block-cu-webauth { margin-top: 40px; }
 
+// Image search
+// ------------------------------------------------
+// fix alignment of input and button
+.form-image-search {
+	.form-group { margin-bottom: 0; }
+}
 
 
 // MEDIA QUERIES
